# react-native-webrtc

./: metro.config.js  package-lock.json  package.json  react-native-webrtc.podspec
android/: .project  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/oney/WebRTCModule/: DataChannelWrapper.java  PeerConnectionObserver.java  WebRTCModule.java  WebRTCModulePackage.java  WebRTCPackage.java
cpp/: TypedArrayApi.cpp
examples/GumTestApp/: App.js  metro.config.js  package.json
examples/GumTestApp/android/: .project
examples/GumTestApp/android/app/: .project
examples/GumTestApp/android/app/src/main/java/com/gumtestapp/: MainApplication.java
examples/GumTestApp/ios/: Podfile
examples/GumTestApp/ios/GumTestApp/: Info.plist
examples/GumTestApp/ios/GumTestApp.xcodeproj/: project.pbxproj
examples/GumTestApp_macOS/android/: .project
ios/RCTWebRTC/: DataChannelWrapper.h  DataChannelWrapper.m  TypedArrayApi.h  WebRTCModule+RTCDataChannel.m  WebRTCModule.h  WebRTCModule.mm  YeetJSIUtils.h  YeetJSIUtils.mm
src/: EventEmitter.js  RTCDataChannel.js  RTCPeerConnection.js
